# spt-raspberr-cam

./: CMakeLists.txt  Cam.desktop  calibration.yml  cam.cpp  set_np.py  softshut.py
